Advantages + result sections

--- a/wp-content/themes/twentyseventeen/style.css
+++ b/wp-content/themes/twentyseventeen/style.css
@@ -14,8 +14,8 @@ button {
 
 .top-bar {
   width: 100%;
-  padding-top: 1rem;
-  padding-bottom: 1rem; }
+  padding-top: 1em;
+  padding-bottom: 1em; }
 
 .top-bar_blue {
   background-color: #00bfff; }
@@ -50,8 +50,8 @@ button {
 .menu a {
   display: inline-block;
   border-bottom: 0.25rem solid transparent;
-  padding: 0.5rem 0;
-  margin: 0 1.2rem; }
+  padding: 0.5em 0;
+  margin: 0 1.2em; }
   .menu a:last-child {
     margin-right: 0; }
 .menu.header__menu a {
@@ -92,7 +92,7 @@ button {
     font-weight: 100;
     text-transform: uppercase;
     border: 0;
-    padding: 0.65rem 0; }
+    padding: 0.65em 0; }
   .hero.hero-main .hero__bg {
     opacity: 0;
     animation-name: fade-in;
@@ -138,22 +138,31 @@ section {
   width: 100%;
   margin: 0 auto; }
   section .section__title {
-    padding-top: 2.5rem;
-    margin-bottom: 3.5rem;
+    padding-top: 1em;
+    margin-bottom: 1.5em;
     font-size: 2.75rem;
     font-weight: 600;
     text-align: center; }
 
 .services .services__elements {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   flex-wrap: wrap; }
+  .services .services__elements.horizontal {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; }
+    .services .services__elements.horizontal .services__element {
+      width: 30%; }
+  .services .services__elements.vertical {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column; }
+    .services .services__elements.vertical .services__element {
+      width: 100%; }
   .services .services__elements .services__element {
-    width: 30%;
     text-align: center;
-    margin-bottom: 2.5rem; }
+    margin-bottom: 5em; }
     .services .services__elements .services__element.animated {
       animation-name: fade-in;
       animation-duration: 0.8s;
@@ -163,11 +172,16 @@ section {
     .services .services__elements .services__element .services__element-icon {
       font-size: 2rem; }
     .services .services__elements .services__element .services__element-title {
-      font-size: 1.35rem;
-      margin-top: 0.5rem;
-      margin-bottom: 1rem; }
+      width: 55%;
+      margin: 0 auto;
+      font-size: 1.5rem;
+      font-weight: 300;
+      color: #6ea5d0;
+      margin-top: 0.5em;
+      margin-bottom: 1em; }
     .services .services__elements .services__element .services__element-text {
-      font-size: 1rem;
+      font-size: 1.1rem;
+      line-height: 1.8rem;
       font-weight: 100; }
 
 .about-me .about-me__content {
@@ -182,6 +196,30 @@ section {
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 50%; }
+
+.result {
+  padding-bottom: 5em; }
+  .result.colored.blue {
+    background-color: #6ea5d0; }
+    .result.colored.blue .result__title {
+      color: white; }
+    .result.colored.blue .result__text {
+      color: white; }
+    .result.colored.blue .result__list li {
+      font-size: 1.125rem;
+      line-height: 1.65rem;
+      font-weight: 200;
+      color: white; }
+  .result .result__title {
+    margin-bottom: 0.5em; }
+  .result .result__text {
+    width: 65%;
+    font-size: 1.25rem;
+    font-weight: 400;
+    text-align: center;
+    margin: 0 auto 3.5em auto; }
+  .result .result__list li {
+    margin-bottom: 1em; }
 
 .footer {
   display: flex;
