Add SEO text block and main directions block

--- a/wp-content/themes/twentyseventeen/style.css
+++ b/wp-content/themes/twentyseventeen/style.css
@@ -153,6 +153,10 @@ section {
     align-items: center; }
     .services .services__elements.horizontal .services__element {
       width: 30%; }
+    .services .services__elements.horizontal.row-4 .services__element {
+      width: 24%; }
+      .services .services__elements.horizontal.row-4 .services__element .services__element-icon img {
+        width: 6rem; }
   .services .services__elements.vertical {
     width: 80%;
     margin: 0 auto;
@@ -181,7 +185,7 @@ section {
       margin-bottom: 1em; }
     .services .services__elements .services__element .services__element-text {
       font-size: 1.1rem;
-      line-height: 1.8rem;
+      line-height: 1.7em;
       font-weight: 100; }
 
 .about-me .about-me__content {
@@ -206,20 +210,28 @@ section {
     .result.colored.blue .result__text {
       color: white; }
     .result.colored.blue .result__list li {
-      font-size: 1.125rem;
-      line-height: 1.65rem;
-      font-weight: 200;
       color: white; }
   .result .result__title {
     margin-bottom: 0.5em; }
   .result .result__text {
     width: 65%;
     font-size: 1.25rem;
+    line-height: 1.8em;
     font-weight: 400;
     text-align: center;
     margin: 0 auto 3.5em auto; }
   .result .result__list li {
+    font-size: 1.125rem;
+    line-height: 1.5em;
+    font-weight: 200;
     margin-bottom: 1em; }
+
+.seo-text {
+  padding-top: 2.5em;
+  padding-bottom: 2.5em;
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 2em; }
 
 .footer {
   display: flex;
