Add dynamic nav menu

--- a/wp-content/themes/twentyseventeen/style.css
+++ b/wp-content/themes/twentyseventeen/style.css
@@ -47,19 +47,19 @@ button {
   justify-content: space-between;
   align-items: center; }
 
-.menu a {
+.menu li {
   display: inline-block;
   border-bottom: 0.25rem solid transparent;
   padding: 0.5em 0;
   margin: 0 1.2em; }
-  .menu a:last-child {
+  .menu li:last-child {
     margin-right: 0; }
-.menu.header__menu a {
+.menu.header__menu li {
   font-size: 1.1rem;
   font-weight: 600;
   color: black;
   transition: all 0.1s cubic-bezier(0.215, 0.61, 0.355, 1) 0s; }
-  .menu.header__menu a:hover {
+  .menu.header__menu li:hover {
     color: #6ea5d0;
     border-color: #6ea5d0;
     transition: all 0.1s cubic-bezier(0.215, 0.61, 0.355, 1) 0s; }
@@ -144,54 +144,57 @@ section {
     font-weight: 600;
     text-align: center; }
 
-.services .services__elements {
-  flex-wrap: wrap; }
-  .services .services__elements.horizontal {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center; }
-    .services .services__elements.horizontal .services__element {
-      width: 30%; }
-    .services .services__elements.horizontal.row-4 .services__element {
-      width: 24%; }
-      .services .services__elements.horizontal.row-4 .services__element .services__element-icon img {
-        width: 6rem; }
-  .services .services__elements.vertical {
-    width: 80%;
+.services .services__elements.horizontal {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: 1fr;
+  grid-column-gap: 0;
+  grid-row-gap: 4em;
+  align-items: center; }
+  .services .services__elements.horizontal .services__element-icon img {
+    width: 6rem; }
+.services .services__elements.vertical {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 0;
+  grid-row-gap: 6em;
+  align-items: center; }
+.services .services__elements .services__element {
+  text-align: center; }
+  .services .services__elements .services__element.animated {
+    animation-name: fade-in;
+    animation-duration: 0.8s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 0s;
+    animation-fill-mode: forwards; }
+  .services .services__elements .services__element .services__element-icon {
+    font-size: 2rem; }
+  .services .services__elements .services__element .services__element-title {
+    width: 55%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column; }
-    .services .services__elements.vertical .services__element {
-      width: 100%; }
-  .services .services__elements .services__element {
-    text-align: center;
-    margin-bottom: 5em; }
-    .services .services__elements .services__element.animated {
-      animation-name: fade-in;
-      animation-duration: 0.8s;
-      animation-timing-function: ease-in-out;
-      animation-delay: 0s;
-      animation-fill-mode: forwards; }
-    .services .services__elements .services__element .services__element-icon {
-      font-size: 2rem; }
-    .services .services__elements .services__element .services__element-title {
-      width: 55%;
-      margin: 0 auto;
-      font-size: 1.5rem;
-      font-weight: 300;
-      color: #6ea5d0;
-      margin-top: 0.5em;
-      margin-bottom: 1em; }
-    .services .services__elements .services__element .services__element-text {
-      font-size: 1.1rem;
-      line-height: 1.7em;
-      font-weight: 100; }
+    font-size: 1.5rem;
+    font-weight: 300;
+    color: #6ea5d0;
+    margin-top: 0.5em;
+    margin-bottom: 1em; }
+  .services .services__elements .services__element .services__element-text {
+    font-size: 1.1rem;
+    line-height: 1.7em;
+    font-weight: 100; }
+
+.advantages {
+  padding-bottom: 8em; }
 
 .about-me .about-me__content {
   display: grid;
   grid-template-columns: 13rem 1fr;
-  grid-gap: 2em;
+  grid-template-rows: 1fr;
+  grid-column-gap: 2em;
+  grid-row-gap: 0;
   align-items: center; }
   .about-me .about-me__content .photo-with-text {
     width: 13rem;
