--- a/wp-content/themes/twentyseventeen/style.scss
+++ b/wp-content/themes/twentyseventeen/style.scss
@@ -16,10 +16,12 @@ $info-text-color: #fff;
     flex-direction: column;
 }
 
-@mixin gridable($gridTemplateColumns, $gridGap, $alignItems) {
+@mixin gridable($gridTemplateColumns, $gridTemplateRows, $gridColumnGap, $gridRowGap, $alignItems) {
     display: grid;
     grid-template-columns: $gridTemplateColumns;
-    grid-gap: $gridGap;
+    grid-template-rows: $gridTemplateRows;
+    grid-column-gap: $gridColumnGap;
+    grid-row-gap: $gridRowGap;
     align-items: $alignItems;
 }
 
@@ -101,7 +103,7 @@ button {
 }
 
 .menu {
-    a {
+    li {
         display: inline-block;
         border-bottom: 0.25rem solid transparent;
         padding: 0.5em 0;
@@ -113,7 +115,7 @@ button {
     }
 
     &.header__menu {
-        a {
+        li {
             font-size: 1.1rem;
             font-weight: 600;
             color: black;
@@ -217,39 +219,23 @@ section {
 
 .services {
     .services__elements {
-        flex-wrap: wrap;
-
         &.horizontal {
-            @include flexible-row();
+            @include gridable(repeat(4, 25%), 1fr, 0, 4em, center);
 
-            .services__element {
-                width: 30%;
-            }
-
-            &.row-4 {
-                .services__element {
-                    width: 24%;
-
-                    .services__element-icon img {
-                        width: 6rem;
-                    }
-                }
+            .services__element-icon img {
+                width: 6rem;
             }
         }
 
         &.vertical {
             width: 80%;
-            margin: 0 auto;
-            @include flexible-column();
-
-            .services__element {
-                width: 100%;
-            }
+            margin-left: auto;
+            margin-right: auto;
+            @include gridable(1fr, 1fr, 0, 6em, center);
         }
 
         .services__element {
             text-align: center;
-            margin-bottom: 5em;
 
             &.animated {
                 @include animated(fade-in, 0.8s, ease-in-out, 0s, forwards);
@@ -278,9 +264,13 @@ section {
     }
 }
 
+.advantages {
+    padding-bottom: 8em;
+}
+
 .about-me {
     .about-me__content {
-        @include gridable(13rem 1fr, 2em, center);
+        @include gridable(13rem 1fr, 1fr, 2em, 0, center);
 
         .photo-with-text {
             width: 13rem;
