--- a/wp-content/themes/twentyseventeen/style.css
+++ b/wp-content/themes/twentyseventeen/style.css
@@ -5,17 +5,17 @@ a {
   text-decoration: none;
   color: black; }
 
+h4 {
+  font-weight: bold;
+  font-size: 1.15rem;
+  margin-bottom: 0.5em; }
+
 button {
   outline: none; }
 
 .container {
   width: 80%;
   margin: 0 auto; }
-
-.top-bar {
-  width: 100%;
-  padding-top: 1em;
-  padding-bottom: 1em; }
 
 .mobile-menu {
   display: none; }
@@ -26,8 +26,18 @@ button {
 .dark-blue {
   background-color: #6ea5d0; }
 
-.header .header__logo {
-  width: 4.5rem; }
+.header {
+  width: 100%;
+  background-color: #6ea5d0; }
+  .header .header__logo {
+    width: 4.5rem; }
+
+.home .header {
+  position: absolute;
+  top: 1.5em;
+  left: 0;
+  background-color: transparent;
+  z-index: 1; }
 
 .info .info__elem {
   display: inline-block;
@@ -47,34 +57,25 @@ button {
 
 .menu li {
   display: inline-block;
-  padding: 0.5em 0;
-  margin: 0 1.2em; }
+  padding: 0.4em 0.8em;
+  margin: 0 0.15em;
+  border-radius: 0.125em;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0s; }
   .menu li:last-child {
     margin-right: 0; }
 .menu.header__menu li {
-  position: relative;
   font-size: 1.1rem;
   font-weight: 600;
-  color: black; }
-  .menu.header__menu li a:after {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    left: 0;
-    bottom: -0.25rem;
-    width: 100%;
-    height: 0.2rem;
-    opacity: 0;
-    background-color: #6ea5d0;
-    transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) 0s; }
+  text-transform: uppercase; }
+  .menu.header__menu li.current_page_item {
+    background-color: #6ea5d0; }
+  .menu.header__menu li a {
+    color: #fff; }
   .menu.header__menu li:hover {
-    border-color: #6ea5d0; }
-    .menu.header__menu li:hover a {
-      color: #6ea5d0;
-      transition: all 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) 0s; }
-      .menu.header__menu li:hover a:after {
-        opacity: 1;
-        bottom: 0; }
+    background-color: #6ea5d0;
+    transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1) 0s; }
 
 .fw-container-fluid {
   padding-left: 0 !important;
@@ -82,7 +83,7 @@ button {
 
 .hero {
   position: relative;
-  height: 44vw; }
+  height: 100vh; }
   .hero .hero__bg {
     height: 100%;
     filter: blur(3px);
@@ -92,15 +93,13 @@ button {
   .hero .hero__title {
     width: 100%;
     position: absolute;
-    top: 28%;
     text-align: center;
     font-size: 2.75rem; }
   .hero .hero__btn-wrapper {
     position: absolute;
-    top: 43%;
-    left: calc(50% - 10rem); }
+    left: calc(50% - 12.5rem); }
   .hero .hero__btn {
-    font-size: 0.9375rem;
+    font-size: 1.25rem;
     font-weight: 100;
     text-transform: uppercase;
     border: 0;
@@ -130,11 +129,11 @@ button {
     animation-fill-mode: forwards; }
   .hero.hero-main .hero__btn {
     display: inline-block;
-    width: 20rem;
+    width: 25rem;
     background-color: #6ea5d0;
     color: #fff;
     text-align: center;
-    border-radius: 20px;
+    border-radius: 1.25em;
     -webkit-transition: background-color 0.2s ease-in-out 0s;
     -moz-transition: background-color 0.2s ease-in-out 0s;
     -o-transition: background-color 0.2s ease-in-out 0s;
@@ -184,7 +183,7 @@ section {
     animation-delay: 0s;
     animation-fill-mode: forwards; }
   .services .services__elements .services__element .services__element-title {
-    width: 55%;
+    max-width: 37.5rem;
     margin: 0 auto;
     font-size: 1.5rem;
     font-weight: 300;
@@ -260,14 +259,27 @@ section {
   line-height: 2em; }
 
 .footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center; }
-  .footer .footer__logo {
-    width: 10%; }
+  background-color: #6ea5d0;
+  padding-top: 2em;
+  padding-bottom: 2em; }
+  .footer .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center; }
+  .footer .footer__menu {
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 0;
+    align-items: center; }
 
-.page .entry-title {
+article.page p {
+  margin-bottom: 1em;
+  text-align: justify;
+  line-height: 1.7em; }
+article.page .entry-title {
   width: 50%;
   font-size: 2.25rem;
   text-align: center;
@@ -275,6 +287,9 @@ section {
   border-bottom: 0.05rem solid #6ea5d0;
   padding: 0.6em 0;
   margin: 0 auto; }
+article.page .entry-content {
+  padding-top: 2em;
+  padding-bottom: 2em; }
 
 /** Animations */
 @keyframes fade-in {
@@ -284,25 +299,35 @@ section {
     opacity: 1; } }
 @keyframes short-show-title-from-top {
   from {
-    top: 20%;
+    top: 30%;
     opacity: 0; }
   to {
-    top: 28%;
+    top: 38%;
     opacity: 1; } }
 @keyframes short-show-title-from-bottom {
   from {
-    top: 51%;
+    top: 56%;
     opacity: 0; }
   to {
-    top: 43%;
+    top: 48%;
     opacity: 1; } }
+@media all and (max-width: 1280px) {
+  .header .container {
+    width: 90%; } }
 @media all and (max-width: 1024px) {
-  .top-bar, .main-bar {
+  .main-bar {
     display: none; }
 
   .mobile-menu {
     display: block; } }
 @media all and (max-width: 960px) {
+  .fw-row {
+    margin-left: 0 !important;
+    margin-right: 0 !important; }
+    .fw-row > div {
+      padding-left: 0 !important;
+      padding-right: 0 !important; }
+
   .services .services__elements.horizontal {
     display: grid;
     grid-template-columns: repeat(2, 50%);
@@ -317,7 +342,21 @@ section {
     font-size: 2rem; }
 
   .services .services__elements.horizontal .services__element-icon img {
-    width: 20vw; } }
+    width: 20vw; }
+
+  .hero .hero__title {
+    font-size: 2.6rem; }
+
+  .about-me .about-me__content {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 13rem 1fr;
+    grid-column-gap: 0;
+    grid-row-gap: 2em;
+    align-items: center;
+    text-align: center; }
+    .about-me .about-me__content .photo-with-text {
+      margin: auto; } }
 @media all and (max-width: 320px) {
   section .section__title {
     font-size: 1.75rem; }
@@ -330,6 +369,29 @@ section {
     grid-row-gap: 4em;
     align-items: center; }
     .services .services__elements.horizontal .services__element-icon img {
-      width: 50vw; } }
+      width: 50vw; }
+
+  .hero .hero__title {
+    font-size: 2rem; }
+  .hero.hero-main .hero__btn-wrapper {
+    left: calc(50% - 9rem); }
+  .hero.hero-main .hero__btn {
+    width: 18rem;
+    font-size: 1rem; }
+
+  @keyframes short-show-title-from-top {
+    from {
+      top: 24%;
+      opacity: 0; }
+    to {
+      top: 32%;
+      opacity: 1; } }
+  @keyframes short-show-title-from-bottom {
+    from {
+      top: 62%;
+      opacity: 0; }
+    to {
+      top: 54%;
+      opacity: 1; } } }
 
 /*# sourceMappingURL=style.css.map */
