--- a/wp-content/themes/twentyseventeen/style.scss
+++ b/wp-content/themes/twentyseventeen/style.scss
@@ -49,6 +49,12 @@ a {
     color: black;
 }
 
+h4 {
+    font-weight: bold;
+    font-size: 1.15rem;
+    margin-bottom: 0.5em;
+}
+
 button {
     outline: none;
 }
@@ -56,12 +62,6 @@ button {
 .container {
     width: 80%;
     margin: 0 auto;
-}
-
-.top-bar {
-    width: 100%;
-    padding-top: 1em;
-    padding-bottom: 1em
 }
 
 .mobile-menu {
@@ -77,9 +77,20 @@ button {
 }
 
 .header {
+    width: 100%;
+    background-color: $dark-blue;
+
     .header__logo {
         width: 4.5rem;
     }
+}
+
+.home .header {
+    position: absolute;
+    top: 1.5em;
+    left: 0;
+    background-color: transparent;
+    z-index: 1;
 }
 
 .info {
@@ -108,8 +119,12 @@ button {
 .menu {
     li {
         display: inline-block;
-        padding: 0.5em 0;
-        margin: 0 1.2em;
+        padding: 0.4em 0.8em;
+        margin: 0 0.15em;
+        border-radius: 0.125em;
+        color: #fff;
+        cursor: pointer;
+        transition: all 0.3s cubic-bezier(.215, .61, .355, 1) 0s;
 
         &:last-child {
             margin-right: 0;
@@ -118,36 +133,21 @@ button {
 
     &.header__menu {
         li {
-            position: relative;
             font-size: 1.1rem;
             font-weight: 600;
-            color: black;
+            text-transform: uppercase;
 
-            a:after {
-                content: "";
-                display: inline-block;
-                position: absolute;
-                left: 0;
-                bottom: -0.25rem;
-                width: 100%;
-                height: 0.2rem;
-                opacity: 0;
+            &.current_page_item {
                 background-color: $dark-blue;
-                transition: all 0.2s cubic-bezier(.215, .61, .355, 1) 0s;
+            }
+
+            a {
+                color: #fff;
             }
 
             &:hover {
-                border-color: $dark-blue;
-
-                a {
-                    color: $dark-blue;
-                    transition: all 0.2s cubic-bezier(.215, .61, .355, 1) 0s;
-
-                    &:after {
-                        opacity: 1;
-                        bottom: 0;
-                    }
-                }
+                background-color: $dark-blue;
+                transition: all 0.3s cubic-bezier(.215, .61, .355, 1) 0s;
             }
         }
     }
@@ -160,7 +160,7 @@ button {
 
 .hero {
     position: relative;
-    height: 44vw;
+    height: 100vh;
 
     .hero__bg {
         height: 100%;
@@ -173,19 +173,17 @@ button {
     .hero__title {
         width: 100%;
         position: absolute;
-        top: 28%;
         text-align: center;
         font-size: 2.75rem;
     }
 
     .hero__btn-wrapper {
         position: absolute;
-        top: 43%;
-        left: calc(50% - 10rem);
+        left: calc(50% - 12.5rem);
     }
 
     .hero__btn {
-        font-size: 0.9375rem;
+        font-size: 1.25rem;
         font-weight: 100;
         text-transform: uppercase;
         border: 0;
@@ -212,11 +210,11 @@ button {
 
         .hero__btn {
             display: inline-block;
-            width: 20rem;
+            width: 25rem;
             background-color: #6ea5d0;
             color: #fff;
             text-align: center;
-            border-radius: 20px;
+            border-radius: 1.25em;
             @include transitioned(background-color, 0.2s, ease-in-out, 0s);
 
             &:hover {
@@ -265,7 +263,7 @@ section {
             }
 
             .services__element-title {
-                width: 55%;
+                max-width: 37.5rem;
                 margin: 0 auto;
                 font-size: 1.5rem;
                 font-weight: 300;
@@ -373,14 +371,16 @@ section {
 }
 
 .footer {
-    @include flexible-row();
+    background-color: $dark-blue;
+    padding-top: 2em;
+    padding-bottom: 2em;
 
-    .footer__logo {
-        width: 10%;
+    .container {
+        @include flexible-row();
     }
 
     .footer__menu {
-
+        @include gridable(repeat(2, 50%), 1fr, 0, 0, center);
     }
 
     .footer__contacts {
@@ -392,7 +392,13 @@ section {
     }
 }
 
-.page {
+article.page {
+    p {
+        margin-bottom: 1em;
+        text-align: justify;
+        line-height: 1.7em;
+    }
+
     .entry-title {
         width: 50%;
         font-size: 2.25rem;
@@ -401,6 +407,11 @@ section {
         border-bottom: 0.05rem solid $dark-blue;
         padding: 0.6em 0;
         margin: 0 auto;
+    }
+
+    .entry-content {
+        padding-top: 2em;
+        padding-bottom: 2em;
     }
 }
 
@@ -418,30 +429,36 @@ section {
 
 @keyframes short-show-title-from-top {
     from {
-        top: 20%;
+        top: 30%;
         opacity: 0;
     }
 
     to {
-        top: 28%;
+        top: 38%;
         opacity: 1;
     }
 }
 
 @keyframes short-show-title-from-bottom {
     from {
-        top: 51%;
+        top: 56%;
         opacity: 0;
     }
 
     to {
-        top: 43%;
+        top: 48%;
         opacity: 1;
     }
 }
 
+@media all and (max-width: 1280px) {
+    .header .container {
+        width: 90%;
+    }
+}
+
 @media all and (max-width: 1024px) {
-    .top-bar, .main-bar {
+    .main-bar {
         display: none;
     }
 
@@ -451,6 +468,16 @@ section {
 }
 
 @media all and (max-width: 960px) {
+    .fw-row {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+
+        >div {
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+        }
+    }
+
     .services {
         .services__elements {
             &.horizontal {
@@ -480,6 +507,23 @@ section {
             }
         }
     }
+
+    .hero {
+        .hero__title {
+            font-size: 2.6rem;
+        }
+    }
+
+    .about-me {
+        .about-me__content {
+            @include gridable(100%, 13rem 1fr, 0, 2em, center);
+            text-align: center;
+
+            .photo-with-text {
+                margin: auto;
+            }
+        }
+    }
 }
 
 @media all and (max-width: 320px) {
@@ -498,6 +542,47 @@ section {
                     width: 50vw;
                 }
             }
+        }
+    }
+
+    .hero {
+        .hero__title {
+            font-size: 2rem;
+        }
+
+        &.hero-main {
+            .hero__btn-wrapper {
+                left: calc(50% - 9rem);
+            }
+
+            .hero__btn {
+                width: 18rem;
+                font-size: 1rem;
+            }
+        }
+    }
+
+    @keyframes short-show-title-from-top {
+        from {
+            top: 24%;
+            opacity: 0;
+        }
+
+        to {
+            top: 32%;
+            opacity: 1;
+        }
+    }
+
+    @keyframes short-show-title-from-bottom {
+        from {
+            top: 62%;
+            opacity: 0;
+        }
+
+        to {
+            top: 54%;
+            opacity: 1;
         }
     }
 }
